cabal-version: 2.2
name:
  dependent-aeson
version:
  0.1
synopsis:
  aeson instances for dependent-map and dependent-sum
description:
  aeson instances for dependent-map and dependent-sum using quantification
homepage:
  https://github.com/chessai/dependent-aeson
bug-reports:
  https://github.com/chessai/dependent-aeson/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Andrew Martin
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  2019 Andrew Martin
category:
  Data
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
    GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Data.Dependent.Aeson.Orphan
  build-depends:
    , aeson >= 1 && < 1.5
    , base >= 4.10.1.0 && < 4.13
    , dependent-map >= 0.2 && < 0.3
    , dependent-sum >= 0.4 && < 0.5
    , quantification == 0.5.0
    , text >= 1.2 && < 1.3
    , unordered-containers >= 0.2 && < 0.3
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/dependent-aeson.git
